React: Sidebar: Fix bug where elements behind dropdown are still clickable

--- a/src/assets/styles/components/main/sidebar.module.scss
+++ b/src/assets/styles/components/main/sidebar.module.scss
@@ -27,6 +27,7 @@
         width: inherit;
         max-width: inherit;
         position: fixed;
+        z-index: 1;
 
         .sidebar_topbar {
             position: relative;
